--- a/testingapp-stg.properties
+++ b/testingapp-stg.properties
@@ -1,3 +1,3 @@
 globalkey=This values is from stg properties
 TeamName=Avengers Team - stg
-Purpose=K8S Exploration purpose - stg
+Purpose=K8S Exploration purpose - stg1
